.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Interview_record__c.object
<CustomObject>
    <description>Recruitment
Used to store applicant interviews</description>
    <fields>
        <fullName>xcdhcm__Applicant_ID__c</fullName>
        <label>Application</label>
        <referenceTo>xcdhcm__Applicant__c</referenceTo>
        <relationshipName>Interview_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Candidate_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>xcdhcm__Candidate__c</referenceTo>
        <relationshipName>Interview_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__End_time__c</fullName>
        <label>End time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Interview_date__c</fullName>
        <label>Interview date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Interview_location__c</fullName>
        <label>Interview location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Interview_notes__c</fullName>
        <inlineHelpText>Please record your Interview notes here. This must be an open, honest and fair assessment and in line with your own Company policy on Equal Opportunities.</inlineHelpText>
        <label>Interview notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Interview_recommendation__c</fullName>
        <label>Interview recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potential candidate</fullName>
                    <default>true</default>
                    <label>Potential candidate</label>
                </value>
                <value>
                    <fullName>Firm recommendation</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Interviewer__c</fullName>
        <label>Interviewer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Start_time__c</fullName>
        <label>Start time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Type_of_interview__c</fullName>
        <label>Type of interview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone interview</fullName>
                </value>
                <value>
                    <fullName>1-to-1 interview</fullName>
                </value>
                <value>
                    <fullName>Panel interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interview</label>
    <nameField>
        <displayFormat>INT-{000}</displayFormat>
        <label>Interview</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>